--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="pG50PAZ8XG5FjjSJe4sYp6f0g+zwYMeHg+OdWKhNBfMCMp8VbiP+zaFUGeytAZyDNetv7+Y7kdAySCHRwCaqarIQFdxPxGorwZkfK92Nbx+DAF0yNxa3MIh3+VrPDpQQ">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="XbqPqDuM6c2xIelegRkDf4p1BvQfQ0mH3ihs745goaXrf7zTvoDACIIFvPg40gibneg4Rvi/S9aVGAcHyp8uVWYd/ceQlTUgoJeP8Pu8164OQk/OO95ZvMPw5UIWbQQD">
                     <div class="">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for reaching out to me! I will make sure to answer as quick as possible!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some
@@ -123,11 +123,11 @@
 
 <section class="slider1 cid-sjwVJrMP1c" id="slider1-1v">
     
-    <div class="carousel slide carousel-fade" id="sjxDMYNgmo" data-ride="carousel" data-interval="5000">
+    <div class="carousel slide carousel-fade" id="sjy7qUIIHh" data-ride="carousel" data-interval="5000">
         <ol class="carousel-indicators">
-            <li data-slide-to="0" class="active" data-target="#sjxDMYNgmo"></li>
-            <li data-slide-to="1" data-target="#sjxDMYNgmo"></li>
-            <li data-slide-to="2" data-target="#sjxDMYNgmo"></li>
+            <li data-slide-to="0" class="active" data-target="#sjy7qUIIHh"></li>
+            <li data-slide-to="1" data-target="#sjy7qUIIHh"></li>
+            <li data-slide-to="2" data-target="#sjy7qUIIHh"></li>
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item slider-image item active">
@@ -163,11 +163,11 @@
                 <a href="services.html#content5-1h" target="false"></a><a href="services.html#features17-1w" target="false"></a><a href="services.html#features17-1w" target="false"></a><a href="services.html#features17-1w"><img class="d-block w-100" src="assets/images/sun-reflection-5118520-1920-1900x1267.jpg"></a></div>
             </div>
         </div>
-        <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#sjxDMYNgmo">
+        <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#sjy7qUIIHh">
             <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#sjxDMYNgmo">
+        <a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#sjy7qUIIHh">
             <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
@@ -182,7 +182,7 @@
     <div class="align-center container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="PMcgZiPT25D+RXBVRv4M35sKzFWljgZyBYrrzoU09ckEoztniSTnXYtKwTtekU03amEUfPhr7giS/8M7A3TuQV0/JA4pJay8PmCmFnPxwr1TQeomDNZVRk35qEFVZfsJ">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="gcwpQYSjC37fSZ08vvpLwBYjYCm820dqu6FsNkUkWbqb8iBSrY1nmDx4sCCorjyhhGmNZC+VOAUq8KzrxEDbY85/o9MfadfMiEgzW+x6+5TPeceHhnD8s1Qap5e5vBn2">
                     <div class="">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you for becoming part of my community!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some
@@ -271,7 +271,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/e" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/s" style="color:#aaa;">web page</a> was built with Mobirise website templates</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/q" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Made with Mobirise - <a href="https://mobirise.site/k" style="color:#aaa;">Click now</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 <div id="cookie-dialog" style="display: none;"><div id="cookiesdirective"><div style="position: fixed; top: 0; right: 0; bottom: 0; left: 0; background-color: rgb(0, 0, 0); opacity: 0.01; z-index: 9999;"></div><div style="position: fixed; top: 0; right: 0; bottom: 0; left: 0; display: flex; align-items: center; z-index: 10000"><div class="cookie-wrapper" style="position: relative; width: 100%; max-width: 500px; margin-right: auto; margin-left: auto; padding: 1rem; text-align: center; border-radius: .3rem; box-shadow: 0 10px 40px 0 rgba(0,0,0,0.2); color:#ffffff; background:rgba(175, 108, 146, 0.99);"><div class="mbr-text"><p class="display-7">This site uses cookies in order to offer you the best experience. Read our <a style='color: #424a4d; text-decoration: underline;' href='privacy.html'>cookie policy</a>.</p></div><div class="mbr-section-btn"><a style="margin:0; background-color:#ffffff !important; color:#000000!important; border-color:#ffffff !important;;" class="btn btn-sm btn-primary display-7" id="impliedsubmit">I Agree</a></div></div></div></div></div>
